Fix logout button small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -489,7 +489,7 @@ textarea {
     header {
         display:flex;
         flex-direction: column;
-        align-items:end;
+        
     }
     #header h1 {
         font-size: 1.8em;
@@ -501,10 +501,7 @@ textarea {
         margin-top: 20px;
         margin-bottom: 70px;
     }
-    .login {
-        position: fixed;
-        z-index: 2;
-    }
+    
     
     .login .button {
         margin:0px;
